src/log/build_2022-08-04_17-00-55/robot_control/stdout_stderr.log
running egg_info
writing C:\dev_robot\src\build\robot_control\robot_control.egg-info\PKG-INFO
writing dependency_links to C:\dev_robot\src\build\robot_control\robot_control.egg-info\dependency_links.txt
writing entry points to C:\dev_robot\src\build\robot_control\robot_control.egg-info\entry_points.txt
writing requirements to C:\dev_robot\src\build\robot_control\robot_control.egg-info\requires.txt
writing top-level names to C:\dev_robot\src\build\robot_control\robot_control.egg-info\top_level.txt
reading manifest file 'C:\dev_robot\src\build\robot_control\robot_control.egg-info\SOURCES.txt'
writing manifest file 'C:\dev_robot\src\build\robot_control\robot_control.egg-info\SOURCES.txt'
running build
running build_py
copying robot_control\Control_V3.py -> C:\dev_robot\src\build\robot_control\build\lib\robot_control
copying robot_control\motor_control.py -> C:\dev_robot\src\build\robot_control\build\lib\robot_control
running install
running install_lib
copying C:\dev_robot\src\build\robot_control\build\lib\robot_control\Control_V3.py -> C:\dev_robot\src\install\Lib\site-packages\robot_control
copying C:\dev_robot\src\build\robot_control\build\lib\robot_control\motor_control.py -> C:\dev_robot\src\install\Lib\site-packages\robot_control
writing byte-compilation script 'C:\Users\guibe\AppData\Local\Temp\tmp1pwrhuku.py'
c:\opt\ros\foxy\x64\python.exe C:\Users\guibe\AppData\Local\Temp\tmp1pwrhuku.py
  File "C:\dev_robot\src\install\Lib\site-packages\robot_control\Control_V3.py", line 71
    match self.motor_ctrl_data:
          ^
SyntaxError: invalid syntax

removing C:\Users\guibe\AppData\Local\Temp\tmp1pwrhuku.py
running install_data
copying package.xml -> C:\dev_robot\src\install\share\robot_control
running install_egg_info
Copying C:\dev_robot\src\build\robot_control\robot_control.egg-info to C:\dev_robot\src\install\Lib\site-packages\robot_control-1.0.0-py3.8.egg-info
running install_scripts
Installing motor_control-script.py script to C:\dev_robot\src\install\lib\robot_control
Installing motor_control.exe script to C:\dev_robot\src\install\lib\robot_control
writing list of installed files to 'C:\dev_robot\src\build\robot_control\install.log'
